(7) Change in plans, changed Valutabtn to Datebtn

--- a/JV6INX_IRF_PROJECT/JV6INX_IRF_PROJECT/JV6INX_IRF_PROJECT.csproj
+++ b/JV6INX_IRF_PROJECT/JV6INX_IRF_PROJECT/JV6INX_IRF_PROJECT.csproj
@@ -62,7 +62,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Valutabtn.cs">
+    <Compile Include="Datebtn.cs">
       <SubType>Component</SubType>
     </Compile>
     <EmbeddedResource Include="Form1.resx">
